# dungeon

./: .gitignore  index.html  sprite-page.html
.agents/skills/dungeon/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: dungeon-instincts.yaml
.claude/skills/dungeon/: SKILL.md
.codex/: AGENTS.md
css/: style.css
js/: animation.js  audio.js  camera.js  combat.js  damage-numbers.js  engine.js  floor-renderer.js  input.js  main.js  particles.js  sprite-page.js
js/characters/: assassin.js  base.js  knight.js  mage.js  necromancer.js  paladin.js  warrior.js
js/enemies/: archdemon.js  base.js  dragon.js  goblin-king.js  goblin.js  lich.js  orc-warlord.js  orc.js  skeleton.js  void-spawn.js  wyvern.js
js/levels/: rooms.js  tower.js
js/ui/: hud.js  menu.js  screens.js
native/: CMakeLists.txt  README.md
native/src/: character_action_database.cpp  character_action_database.hpp  main.cpp  monster_action_database.cpp  monster_action_database.hpp  pixel_fury.cpp  pixel_fury.hpp  pixel_fury_content.cpp  pixel_fury_content.hpp
native/tests/: pixel_fury_tests.cpp
