cmake_minimum_required(VERSION 3.16)
project(pixel_fury_ethereal_spire LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(pixel_fury_core src/pixel_fury.cpp src/pixel_fury_content.cpp)
target_include_directories(pixel_fury_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
add_executable(pixel_fury_sim src/main.cpp)
target_link_libraries(pixel_fury_sim PRIVATE pixel_fury_core)
add_executable(pixel_fury_tests tests/pixel_fury_tests.cpp)
target_link_libraries(pixel_fury_tests PRIVATE pixel_fury_core)
enable_testing()
add_test(NAME pixel_fury_core_tests COMMAND pixel_fury_tests)
